src/tests/fixtures/field_values/ArrayOfPromises.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export default class SomeType {
  /** @gqlField */
  b: Promise<string>[];
  /** @gqlField */
  c: Array<Promise<string>>;
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/field_values/ArrayOfPromises.invalid.ts:4:6 - error: Unable to resolve type reference. In order to generate a GraphQL schema, Grats needs to determine which GraphQL type is being referenced. This requires being able to resolve type references to their `@gql` annotated declaration. However this reference could not be resolved. Is it possible that this type is not defined in this file?

4   b: Promise<string>[];
       ~~~~~~~~~~~~~~~
src/tests/fixtures/field_values/ArrayOfPromises.invalid.ts:6:12 - error: Unable to resolve type reference. In order to generate a GraphQL schema, Grats needs to determine which GraphQL type is being referenced. This requires being able to resolve type references to their `@gql` annotated declaration. However this reference could not be resolved. Is it possible that this type is not defined in this file?

6   c: Array<Promise<string>>;
             ~~~~~~~~~~~~~~~
